objects/Account.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>略称</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNameOverlap__c</fullName>
        <label>取引先名重複確認</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>住所（1）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>住所（2）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>住所（3）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>代理店区分</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateCode__c</fullName>
        <label>代替コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateName__c</fullName>
        <label>代替名</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>地域</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>住所（請求先）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <label>請求先状況</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>請求書</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSM_SFDC_RuisekiLost_Amount__c</fullName>
        <label>累積失注金額</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <label>請求方式</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <label>クローズ方法</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>クラスタ情報テーブルへの連携項目</description>
        <label>クラスタ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeLen__c</fullName>
        <description>取引先コードの文字数（Profile:System Adminのみ参照可能）</description>
        <formula>LEN(Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>7桁・・・ERPから連携
 9桁・・・7桁+SEQ2桁で細分化★★★
10桁・・・仮設定☆★☆</inlineHelpText>
        <label>取引先コード桁数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>取引先コード</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompanyPaper__c</fullName>
        <label>当社用紙区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>国コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>国</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedName__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>作成者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerActivityScope__c</fullName>
        <label>Scope of Customer&apos;s Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <label>お客様取引先コード</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerFieldOtherLabel__c</fullName>
        <label>Field of Customer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerField__c</fullName>
        <label>Field of Customer</label>
        <picklist>
            <picklistValues>
                <fullName>a. Military/Defense</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Atomic Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Semiconductor (IC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Physics/Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Chemistry/Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Biology/Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h. Manufacturing of deuterium oxide(heavy water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i. Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>お客様取引先名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerProcMainUser__c</fullName>
        <label>Principal User of Customer&apos;s Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSituation__c</fullName>
        <label>取引先の状況</label>
        <picklist>
            <picklistValues>
                <fullName>有効</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無効</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerStatus__c</fullName>
        <label>Customer&apos;s Status</label>
        <picklist>
            <picklistValues>
                <fullName>a. Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Military/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Organization related to [ c ].</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Organization similar to [ c &amp; d ].</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DesignationPaper__c</fullName>
        <label>指定用紙区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>詳細</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DispatchTime__c</fullName>
        <label>派遣時間</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistanceSection__c</fullName>
        <label>距離区分</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistanceZone__c</fullName>
        <description>距離ゾーンテーブルへの連携項目</description>
        <label>距離ゾーン</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateFormula__c</fullName>
        <formula>Datevalue(EndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FacilityTypeOtherLabel__c</fullName>
        <label>Type of Facility Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityType__c</fullName>
        <label>Type of Facility</label>
        <picklist>
            <picklistValues>
                <fullName>a. University/College/School</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Laboratory/Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Intelligence agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Public Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h. Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field203__c</fullName>
        <description>メール内容をペーストして下さい。</description>
        <inlineHelpText>JRI_CS-WGで用いる顧客満足度です。</inlineHelpText>
        <label>顧客満足度状況(最新)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field204__c</fullName>
        <inlineHelpText>JRI_CS-WGで用いる顧客満足度状況です。</inlineHelpText>
        <label>顧客満足度状況(過去)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field206__c</fullName>
        <defaultValue>false</defaultValue>
        <label>20条機関</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialCodeJeolAsia__c</fullName>
        <label>Financial Code JEOL Asia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終更新者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MaintRenewalDays__c</fullName>
        <description>User can set the custom field to control create MaintenanceContractManagement Batch</description>
        <label>Maint Renewal Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MapAddress__c</fullName>
        <description>住所2と住所3の間にSpace Set
2017/05/23 内野さんより依頼</description>
        <formula>IF( ISNULL(AddressLine1__c &amp; AddressLine2__c &amp; &quot;　&quot; &amp;AddressLine3__c),  AddressLine1__c &amp; AddressLine2__c &amp; &quot;　&quot; &amp;AddressLine3__c,  HYPERLINK(&apos;/apex/jeol_MapViewPage?id=&apos; + Id , AddressLine1__c &amp; AddressLine2__c &amp; &quot;　&quot; &amp;AddressLine3__c , &apos;_blank&apos; )  )</formula>
        <label>住所[Google Map]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>市場セグメント</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameUpToKana__c</fullName>
        <label>取引先名（半角カナ）</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_account_ID__c</fullName>
        <label>取引先コード(新)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NineDigitAccountDisplay__c</fullName>
        <formula>IF (( LEN(Code__c) = 9), &apos;★★★&apos; , IF (( LEN(Code__c) = 10), &apos;☆★☆&apos;, &apos;&apos;)) &amp; IF (Field224__c = true ,&quot;　【閉鎖】&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9桁取引先表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OfficialName1__c</fullName>
        <label>正式名称1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficialName2__c</fullName>
        <label>正式名称2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficialNameRow1__c</fullName>
        <label>正式名称(1行目)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficialNameRow2__c</fullName>
        <label>正式名称(2行目)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts1__c</fullName>
        <label>部品備考1</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts2__c</fullName>
        <label>部品備考2</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsCommission__c</fullName>
        <label>部品口銭</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentConditions__c</fullName>
        <label>支払条件</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMeans__c</fullName>
        <label>支払方法</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>見積書</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecoveryDestinationStatus__c</fullName>
        <label>回収先状況</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ruisekisei_yaku_kaisuu__c</fullName>
        <inlineHelpText>今までの成約回数。
成立フラグが立っている商談の合計数</inlineHelpText>
        <label>累積成約回数</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDC_Latest_Closed_date__c</fullName>
        <inlineHelpText>直近の成約日。 
成立フラグが立っている最大の商談の完了予定日</inlineHelpText>
        <label>最新成約日</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDC_RuisekiClose_Amount__c</fullName>
        <inlineHelpText>今までの成約金額。 
成立フラグが立っている商談の合計金額</inlineHelpText>
        <label>累積成約金額</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesAccountEndDateFormula__c</fullName>
        <formula>Datevalue(SalesAccountEndDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売先取引先終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesAccountEndDatetime__c</fullName>
        <label>販売先取引先終了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesAccountFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>販売先取引先フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesAccountSituation__c</fullName>
        <label>販売先取引先状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccountStartDateFormula__c</fullName>
        <formula>Datevalue(SalesAccountStartDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売先取引先開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesAccountStartDatetime__c</fullName>
        <label>販売先取引先開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <description>取引先にたいする営業担当者</description>
        <inlineHelpText>取引先にたいする営業担当者</inlineHelpText>
        <label>営業担当者</label>
        <picklist>
            <picklistValues>
                <fullName>●×▼</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>吉田　浩久</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宍戸　孝士</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>比嘉　勝孝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>岡本　敏市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>竹内　健史</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>千葉　健</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福嶋　隼人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>古家野　宏行</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>蓮見　景子</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>村田　裕樹</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>藤井　直之</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>矢島　太則</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>西島　功</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>山本　敏人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>石井　啓介</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会田　明弘</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>米倉　恵多</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>石原　勝俊</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>塚本　順也</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>落合　宏寿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保坂　計一郎</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三井　広和</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>米田　大祐</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宮尾　敬一</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>谷端　英憲</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Scheduling__c</fullName>
        <label>分納区分</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seishiki_meishou1__c</fullName>
        <description>正式名称</description>
        <label>取引先名(正式名称)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seishiki_meishou2__c</fullName>
        <description>正式名称２</description>
        <inlineHelpText>Seishiki_meishou2</inlineHelpText>
        <label>学部・事業所</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaBranch__c</fullName>
        <label>サービスエリア支店</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <label>サービスエリア名</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicesCommission__c</fullName>
        <label>役務口銭</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToMaster__c</fullName>
        <label>出荷マスタ</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShipToStatus__c</fullName>
        <label>出荷先状況</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountEndDateFormula__c</fullName>
        <formula>Datevalue(ShipmentAccountEndDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先取引先終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountEndDatetime__c</fullName>
        <label>出荷先取引先終了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>出荷先取引先フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountSituation__c</fullName>
        <label>出荷先取引先状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountStartDateFormula__c</fullName>
        <formula>Datevalue(ShipmentAccountStartDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先取引先開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipmentAccountStartDatetime__c</fullName>
        <label>出荷先取引先開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>住所（納入先）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal__c</fullName>
        <label>シグナル名称</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardFreehandmemo__c</fullName>
        <label>名刺手書きメモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardListName__c</fullName>
        <inlineHelpText>List Name</inlineHelpText>
        <label>名刺リスト名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardMemo__c</fullName>
        <label>名刺メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>名刺</label>
        <referenceTo>SmartViscaf__NameCard__c</referenceTo>
        <relationshipLabel>取引先</relationshipLabel>
        <relationshipName>AccountNameCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDateFormula__c</fullName>
        <formula>Datevalue(StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開始日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>都道府県</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatementOfDelivery__c</fullName>
        <label>納品書</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UndergraduateFormula__c</fullName>
        <formula>IF ( NULLVALUE ( ParentId , &quot;&quot; ) == &quot;&quot; ,  Undergraduate__c ,  Parent.Undergraduate__c )</formula>
        <inlineHelpText>UndergraduateFormula
IF ( NULLVALUE ( ParentId , &quot;&quot; ) == &quot;&quot; ,  Undergraduate__c ,  Parent.Undergraduate__c )</inlineHelpText>
        <label>学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate__c</fullName>
        <inlineHelpText>Undergraduate</inlineHelpText>
        <label>学部・事業所</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016fy_SI_7__c</fullName>
        <formula>Parent.Field209__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[暫定]2016fy_SI営業担当者(7桁)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016fy_SI__c</fullName>
        <formula>IF ( Field209__c &lt;&gt; &quot;&quot;,Field209__c,  X2016fy_SI_7__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016fy_SI営業担当者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016fy_SI_main__c</fullName>
        <formula>LEFT(X2016fy_SI__c,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2016fy_SI営業担当者（主）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_ID_from_BAAN__c</fullName>
        <label>取引先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chiikishiten__c</fullName>
        <label>地域支店</label>
        <picklist>
            <picklistValues>
                <fullName>東京</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>名古屋</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仙台</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>札幌</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>筑波</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>広島</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福岡</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>横浜</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高松</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (North America)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Asia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Russia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Korea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (India)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Germany)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Italy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (BV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (AB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (SAS)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__SF_NEW_CREATE_VISIT__c</fullName>
        <description>取引先に紐付く新規行動登録画面へのリンク</description>
        <formula>HYPERLINK(&quot;https://ap.salesforce.com/00U/e?what_id=&quot;&amp; Id ,&quot;新規訪問登録&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新規訪問登録</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__Sf_create_opp__c</fullName>
        <description>新規商談登録リンク</description>
        <formula>HYPERLINK(&quot;https://ap.salesforce.com/006/e?retURL=%2F&quot;&amp; Id &amp; &quot;&amp;accid=&quot;&amp; Id,&quot;新規商談登録&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>新規商談登録</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>local_map__c</fullName>
        <description>[, height, width]</description>
        <formula>IMAGE(&quot;http://maps.google.com/maps?f=q&amp;hl=ja&amp;q=Account.BillingStreet+Account.BillingCity+Account.BillingState&amp;om=1&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>場所</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts_7</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Undergraduate__c</columns>
        <columns>Code__c</columns>
        <columns>Field212__c</columns>
        <columns>Address__c</columns>
        <columns>CountryCode__c</columns>
        <columns>Area__c</columns>
        <columns>CustomerSituation__c</columns>
        <columns>NineDigitAccountDisplay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.SITE</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>JPN</value>
        </filters>
        <label>すべての取引先(7桁)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>PostalCode__c</columns>
        <columns>Address__c</columns>
        <columns>Country__c</columns>
        <columns>CustomerSituation__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>今週の新規</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>account_ID_from_BAAN__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>View18</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NineDigitAccountDisplay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>糸魚川市</value>
        </filters>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>妙高市</value>
        </filters>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>上越市</value>
        </filters>
        <label>堺エリア(にいがた)</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View19</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NineDigitAccountDisplay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>糸魚川市</value>
        </filters>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>妙高市</value>
        </filters>
        <filters>
            <field>Address__c</field>
            <operation>contains</operation>
            <value>上越市</value>
        </filters>
        <label>堺エリア(新潟)</label>
        <language>ja</language>
    </listViews>
</CustomObject>